root/k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      tolerations:
        - key: 'node-role.kubernetes.io/control-plane'
          operator: 'Exists'
          effect: 'NoSchedule'
      containers:
        - name: backend
          image: docker.io/oasisasx/eventseat-backend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3001
