root/k8s/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-0 # แก้ชื่อให้ตรงกับที่ Mongoose เรียกหา
  labels:
    app: mongo
spec:
  clusterIP: None # ทำให้เป็น Headless Service เพื่อให้คุยกับ Pod โดยตรง
  selector:
    statefulset.kubernetes.io/pod-name: mongo-0 # ชี้เจาะจงไปที่ Pod mongo-0
  ports:
    - port: 27017
      targetPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongo # สร้างชื่อ mongo สำรองไว้สำหรับ Prisma ด้วย
  labels:
    app: mongo
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: mongo
  type: ClusterIP
