root/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'false'
    nginx.ingress.kubernetes.io/rewrite-target: /api/$1 # กรณีต้องการรักษา /api ไว้
spec:
  ingressClassName: nginx
  rules:
    - host: api.event-seat.elitefund.fun
      http:
        paths:
          - path: /api/?(.*) # ใช้ regex เพื่อดักจับทุก path หลัง /api
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend-service
                port:
                  number: 3001
